Update dependencies and enhance Solr configuration for improved functionality