@@ -4,23 +4,20 @@ import dev.aparikh.aipoweredsearch.config.PostgresTestConfiguration;
 import dev.aparikh.aipoweredsearch.search.model.SearchResponse;
 import dev.aparikh.aipoweredsearch.search.service.SearchService;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.common.SolrInputDocument;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
-import org.springframework.ai.chat.memory.ChatMemory;
 import org.springframework.ai.chat.model.ChatModel;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.test.web.server.LocalServerPort;
-import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Import;
-import org.springframework.context.annotation.Primary;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.testcontainers.containers.SolrContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
@@ -30,15 +27,19 @@ import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @Testcontainers
-@Import({PostgresTestConfiguration.class, SearchIntegrationTest.IntegrationTestConfiguration.class})
+@Import(PostgresTestConfiguration.class)
 class SearchIntegrationTest {
 
-    @Container
-    static final SolrContainer solrContainer = new SolrContainer(DockerImageName.parse("solr:9.6"))
-            .withEnv("SOLR_HEAP", "512m");
+    @MockitoBean
+    private ChatModel chatModel;
+
+    @MockitoBean
+    private SearchService searchService;
 
     @LocalServerPort
     private int port;
@@ -49,61 +50,34 @@ class SearchIntegrationTest {
     @Autowired
     private SolrClient solrClient;
 
-    private static final String COLLECTION = "test-collection";
+    @Container
+    static final SolrContainer solrContainer = new SolrContainer(DockerImageName.parse("solr:9.6"))
+            .withEnv("SOLR_HEAP", "512m");
 
-    @TestConfiguration
-    static class IntegrationTestConfiguration {
-        
-        @Bean
-        @Primary
-        public SolrClient solrClient() {
-            String solrUrl = "http://" + solrContainer.getHost() + ":" + solrContainer.getSolrPort() + "/solr";
-            System.out.println("Creating SolrClient with URL: " + solrUrl);
-            return new HttpSolrClient.Builder(solrUrl).build();
-        }
-        
-        @Bean
-        @Primary 
-        public SearchService searchService(
-                dev.aparikh.aipoweredsearch.search.repository.SearchRepository searchRepository,
-                ChatMemory chatMemory) {
-            
-            // Mock ChatModel
-            ChatModel mockChatModel = Mockito.mock(ChatModel.class);
-
-            // Create a simple SearchService that bypasses AI and returns predefined results
-            return new SearchService(searchRepository, mockChatModel, chatMemory) {
-                @Override
-                public dev.aparikh.aipoweredsearch.search.model.SearchResponse search(String collection, String freeTextQuery) {
-                    // Return a simple mock response without involving AI
-                    return new dev.aparikh.aipoweredsearch.search.model.SearchResponse(
-                        java.util.List.of(java.util.Map.of(
-                            "id", "1", 
-                            "name", "Spring Boot Application", 
-                            "description", "A sample Spring Boot application with Solr integration")),
-                        java.util.Collections.emptyMap()
-                    );
-                }
-            };
-        }
+    @DynamicPropertySource
+    static void configureSolrProperties(DynamicPropertyRegistry registry) {
+        String solrUrl = "http://" + solrContainer.getHost() + ":" + solrContainer.getSolrPort();
+        registry.add("solr.url", () -> solrUrl);
     }
+
+    private static final String COLLECTION = "test-collection";
 
     @BeforeEach
     void setUp() throws Exception {
         System.out.println("Solr Container Host: " + solrContainer.getHost());
         System.out.println("Solr Container Port: " + solrContainer.getSolrPort());
         System.out.println("Solr Container Running: " + solrContainer.isRunning());
-        
+
         // Create collection if it doesn't exist
         try {
             solrContainer.execInContainer("/opt/solr/bin/solr", "create_collection", "-c", COLLECTION, "-d", "_default");
         } catch (Exception e) {
             // Collection might already exist, ignore
         }
-        
+
         // Wait a bit for collection to be ready
         Thread.sleep(2000);
-        
+
         // Add test document
         SolrInputDocument doc = new SolrInputDocument();
         doc.addField("id", "1");
@@ -111,6 +85,16 @@ class SearchIntegrationTest {
         doc.addField("description", "A sample Spring Boot application with Solr integration");
         solrClient.add(COLLECTION, doc);
         solrClient.commit(COLLECTION);
+
+        // Configure mock SearchService to return predefined results
+        when(searchService.search(anyString(), anyString()))
+            .thenReturn(new SearchResponse(
+                java.util.List.of(java.util.Map.of(
+                    "id", "1",
+                    "name", "Spring Boot Application",
+                    "description", "A sample Spring Boot application with Solr integration")),
+                java.util.Collections.emptyMap()
+            ));
     }
 
     @Test
@@ -131,10 +115,10 @@ class SearchIntegrationTest {
         // Then
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertNotNull(response.getBody().getDocuments());
-        assertEquals(1, response.getBody().getDocuments().size());
+        assertNotNull(response.getBody().documents());
+        assertEquals(1, response.getBody().documents().size());
         
-        Map<String, Object> document = response.getBody().getDocuments().get(0);
+        Map<String, Object> document = response.getBody().documents().getFirst();
         assertEquals("1", document.get("id"));
         assertEquals("Spring Boot Application", document.get("name"));
         assertEquals("A sample Spring Boot application with Solr integration", document.get("description"));
